--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.562.0",
     "docx": "^9.1.0",
     "@google/genai": "^1.34.0",
-    "@supabase/supabase-js": "2.48.1"
+    "@supabase/supabase-js": "2.48.1",
+    "@datadog/browser-logs": "^6.25.1",
+    "@datadog/browser-rum": "^6.25.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
